close #52 fix: create central z-index ordering for modals and toasts

--- a/manager/src/styles/variables.scss
+++ b/manager/src/styles/variables.scss
@@ -116,3 +116,7 @@ $transition-duration-fast: 150ms;
 $transition-duration-base: 300ms;
 $transition-duration-slow: 500ms;
 $transition-timing-function: ease-in-out;
+
+// Z-index
+$modal-z-index: 1000;
+$toast-z-index: 1100;
